[gd_scene load_steps=22 format=3 uid="uid://hxwr1px1pf31"]

[ext_resource type="Script" path="res://collectables/diamond.gd" id="1_48ddd"]
[ext_resource type="Texture2D" uid="uid://rmh6q4apjria" path="res://assets/collectables/diamond.png" id="1_fcj5v"]
[ext_resource type="Texture2D" uid="uid://ugk4n1igff5a" path="res://assets/collectables/blue_effects.png" id="2_au0pt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n4jj6"]
atlas = ExtResource("2_au0pt")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8xng"]
atlas = ExtResource("2_au0pt")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ardgs"]
atlas = ExtResource("2_au0pt")
region = Rect2(256, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hhb2"]
atlas = ExtResource("2_au0pt")
region = Rect2(288, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5y15"]
atlas = ExtResource("2_au0pt")
region = Rect2(512, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r85bb"]
atlas = ExtResource("2_au0pt")
region = Rect2(544, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snnhr"]
atlas = ExtResource("2_au0pt")
region = Rect2(576, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5fwg"]
atlas = ExtResource("2_au0pt")
region = Rect2(608, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85jc7"]
atlas = ExtResource("1_fcj5v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxh6x"]
atlas = ExtResource("1_fcj5v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_22ana"]
atlas = ExtResource("1_fcj5v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0jly"]
atlas = ExtResource("1_fcj5v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxehi"]
atlas = ExtResource("1_fcj5v")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt77i"]
atlas = ExtResource("1_fcj5v")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r15bp"]
atlas = ExtResource("1_fcj5v")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43oql"]
atlas = ExtResource("1_fcj5v")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rbl6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4jj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8xng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ardgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hhb2")
}],
"loop": false,
"name": &"appearing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5y15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r85bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snnhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5fwg")
}],
"loop": false,
"name": &"collected",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85jc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxh6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22ana")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0jly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxehi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt77i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r15bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43oql")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ibuj0"]

[node name="Diamond" type="Area2D"]
collision_layer = 8
script = ExtResource("1_48ddd")

[node name="Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_rbl6c")
autoplay = "default"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ibuj0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="tree_exited" from="Animation" to="." method="_on_animation_tree_exited"]
[connection signal="visibility_changed" from="Animation" to="." method="_on_animation_visibility_changed"]
